# KitsuneHub

./: .gitignore  Cargo.toml  README.md
frontend/: biome.json  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx  index.css
frontend/src/entities/installer-card/: InstallerCard.tsx  index.ts
frontend/src/features/category-filter/: CategoryFilter.tsx
frontend/src/features/filter-tabs/: FilterTabs.tsx
frontend/src/features/logs-modal/: LogsModal.tsx  index.ts
frontend/src/features/search-bar/: SearchBar.tsx
frontend/src/shared/api/: installer-api.ts  mock-data.ts  query-keys.ts
frontend/src/shared/hooks/: index.ts  use-installers.ts
frontend/src/shared/lib/: notifications.tsx  platform.ts  utils.ts
frontend/src/shared/store/: app-store.ts
frontend/src/shared/types/: installer.ts
frontend/src/shared/ui/: animated-counter.tsx  cursor-spotlight.tsx  keyboard-shortcuts-handler.tsx
frontend/src/widgets/batch-install/: BatchInstallModal.tsx  index.ts
frontend/src/widgets/batch-operations/: BatchOperationsModal.tsx
frontend/src/widgets/details-panel/: DetailsPanel.tsx  index.ts
frontend/src/widgets/header/: Header.tsx
frontend/src/widgets/installer-list/: InstallerList.tsx  index.ts
installers/: README.md  example-app.json
installers/example-app/: check.sh  install.sh  latest_version.sh  uninstall.sh  update.sh  version.sh
src/: main.rs
src/api/: mod.rs
src/installer/: loader.rs  logger.rs  mod.rs  module.rs  script.rs
src/installers/: base.rs  mod.rs
(+2 files in other folders)
