[package]
name = "kitsune-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

